# plosca.ru

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  build.zig  build.zig.zon  css_migration_plan.md  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.go  main_test.go  nob  package-lock.json  package.json  playwright.config.ts  webapp.new  webapp.pid
.github/workflows/: ci.yml
cmd/nob/: main.go
docs/: gwern_net_tech_review.md
markdown/: prose.md
public/: prose.md.html
scripts/: bench.sh  capture-screenshots.mjs  compare-screenshots.mjs  smoke.sh  update-style-version.mjs
src/: config.rs  error_response.rs  lib.rs  main.rs  main.zig  metrics.rs  routes.rs  server.rs  static_files.rs  stats.rs
src/content/: link_context.json
src/styles/: input.css  site.css
src/tools/: site.zig
static/: ._style.css  404.html  404.html.br  about.html  about.html.br  hello_world.html  hello_world.html.br  hello_world.md  hello_world.md.br  hello_world.txt  hello_world.txt.br  index.html  index.html.br  prose.html  prose.html.br  prose.md  prose.md.br  prose.txt  prose.txt.br  site-features.js  site-features.js.br  site.webmanifest  site.webmanifest.br  sitemap.xml  sitemap.xml.br  style.css  style.css.br  theme.js  theme.js.br
static/archive/: 0540764735407c9c.html  0540764735407c9c.html.br  139d5101e58c2a7b.html  139d5101e58c2a7b.html.br  155fda74a6e1d682.html  index.html  (+14 more)
static_old/: 404.html  about.html  hello_world.html  index.html  prose.html  style.20250817.min.css  style.css  writings.html
tests/: server.rs  visual.spec.ts
(+49 files in other folders)
