[package]
name = "ploscaru"
version = "0.1.0"
edition = "2021"

[lib]
name = "ploscaru"
path = "src/lib.rs"

[[bin]]
name = "webapp"
path = "src/main.rs"

[[bin]]
name = "nob"
path = "src/bin/nob.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
include_dir = "0.7"
libc = "0.2"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stats_alloc = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "process", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
regex = "1"
tempfile = "3"
tower = "0.5"
