[package]
name = "ploscaru"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "ploscaru"
path = "src/lib.rs"

[[bin]]
name = "webapp"
path = "src/main.rs"

[[bin]]
name = "nob"
path = "src/bin/nob.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
http = "1"
libc = "0.2"
sha2 = "0.10"
stats_alloc = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
brotli = "8"
flate2 = "1"
mime_guess = "2"
sha2 = "0.10"
walkdir = "2"

[dev-dependencies]
tower = "0.5"
